--- a/styles/_commons.scss
+++ b/styles/_commons.scss
@@ -1,29 +1,34 @@
 @use "mixins" as *;
 
 .mb-sm {
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
 }
 
 .mb-md {
-    margin-bottom: 25px;
+    margin-bottom: 25px !important;
 }
 
 .mb-lg {
-    margin-bottom: 50px;
+    margin-bottom: 50px !important;
 }
 
 .font-sm {
     font-size: 1rem;
+    @include mq(sm) {
+        font-size: 1.5rem;
+    }
 }
 
 .font-md {
     font-size: 1.5rem;
+    @include mq(sm) {
+        font-size: 2rem;
+    }
 }
 
 .font-lg {
     font-size: 2rem;
-}
-
-.aaa {
-    @extend .font-lg;
+    @include mq(sm) {
+        font-size: 2.2rem;
+    }
 }
