--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,43 @@
 @charset "UTF-8";
+.mb-sm, .result__table, .result > p:nth-of-type(1) {
+  margin-bottom: 20px !important;
+}
+
+.mb-md, .container > h2, .container .quiz, .container .form {
+  margin-bottom: 25px !important;
+}
+
+.mb-lg, .result > p:nth-of-type(2) {
+  margin-bottom: 50px !important;
+}
+
+.font-sm, .container .quiz, .container .buttons .btn, .result > p:nth-of-type(2) {
+  font-size: 1rem;
+}
+@media screen and (min-width: 480px) {
+  .font-sm, .container .quiz, .container .buttons .btn, .result > p:nth-of-type(2) {
+    font-size: 1.5rem;
+  }
+}
+
+.font-md {
+  font-size: 1.5rem;
+}
+@media screen and (min-width: 480px) {
+  .font-md {
+    font-size: 2rem;
+  }
+}
+
+.font-lg, .result > h3, .result > p {
+  font-size: 2rem;
+}
+@media screen and (min-width: 480px) {
+  .font-lg, .result > h3, .result > p {
+    font-size: 2.2rem;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -36,7 +75,6 @@ body {
 .container > h2 {
   font-size: 18px;
   text-align: center;
-  margin-bottom: 25px;
 }
 .container .quiz {
   border: 1px solid #333;
@@ -47,35 +85,12 @@ body {
   line-height: 60px;
   text-align: center;
   font-weight: 600;
-  font-size: 1rem;
   margin: 0 auto;
-  margin-bottom: 25px;
   background-color: rgb(255, 249, 242);
-}
-@media screen and (min-width: 480px) {
-  .container .quiz {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 600px) {
-  .container .quiz {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 960px) {
-  .container .quiz {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container .quiz {
-    font-size: 1.5rem;
-  }
 }
 .container .form {
   display: flex;
   justify-content: center;
-  margin-bottom: 25px;
 }
 .container .form label {
   margin-right: 15px;
@@ -102,7 +117,6 @@ body {
   display: block;
   border: 1px solid #333;
   cursor: pointer;
-  font-size: 1rem;
   background-color: #ffdddd;
   transition: all 0.2s;
   margin-right: 10px;
@@ -167,7 +181,6 @@ body {
   width: 90%;
   margin: 0 auto;
   border-collapse: collapse;
-  margin-bottom: 20px;
 }
 .result__table th, .result__table td {
   border: #333 solid 1px;
@@ -181,7 +194,6 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   margin: 30px auto;
-  font-size: 2rem;
   line-height: 2rem;
   border: 2px solid #6b6b6b;
   border-radius: 10px;
@@ -193,33 +205,7 @@ body {
   margin: 0 auto;
   color: red;
   font-weight: 600;
-  font-size: 2rem;
-}
-.result > p:nth-of-type(1) {
-  margin-bottom: 20px;
 }
 .result > p:nth-of-type(2) {
-  font-size: 1rem;
   height: 1.5rem;
-  margin-bottom: 50px;
-}
-@media screen and (min-width: 480px) {
-  .result > p:nth-of-type(2) {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 600px) {
-  .result > p:nth-of-type(2) {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 960px) {
-  .result > p:nth-of-type(2) {
-    font-size: 1.5rem;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .result > p:nth-of-type(2) {
-    font-size: 1.5rem;
-  }
 }/*# sourceMappingURL=style.css.map */
