--- a/styles/_commons.scss
+++ b/styles/_commons.scss
@@ -13,9 +13,9 @@
 }
 
 .font-sm {
-    font-size: 1rem;
+    font-size: 1.2rem;
     @include mq(sm) {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -27,8 +27,12 @@
 }
 
 .font-lg {
-    font-size: 2rem;
+    font-size: 4rem;
     @include mq(sm) {
-        font-size: 2.2rem;
+        font-size: 5rem;
     }
+}
+
+.maxWidth {
+    max-width: 500px;
 }
