--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
 @use "mixins" as *;
 @use "commons" as *;
- 
+
 * {
     margin: 0;
     padding: 0;
@@ -36,10 +36,13 @@ body {
     height: fit-content;
     margin: 0 auto;
     padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     & > h2 {
         @extend .mb-md;
-        font-size: 18px;
+        @extend .font-sm;
         text-align: center;
     }
 
@@ -47,26 +50,41 @@ body {
         border: 1px solid #333;
         border-radius: 10px;
         width: 80%;
-        max-width: 500px;
+        @extend .maxWidth;
 
-        @extend .font-sm;
-        height: 60px;
+        @extend .font-lg;
+        height: 150px;
         line-height: 60px;
-        text-align: center;
         font-weight: 600;
         margin: 0 auto;
         @extend .mb-md;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: rgb(255, 249, 242);
     }
 
     & .form {
         @extend .mb-md;
+        width: 300px;
+        @extend .maxWidth;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         & label {
+            flex-basis: 33%;
+            text-align: center;
             margin-right: 15px;
-            font-size: 1.2rem;
+            font-size: 1.5em;
             cursor: pointer;
+            position: relative;
+
+            & > input[type="radio"]{
+                width: 1.2em;
+                height: 1.2em;
+                position: absolute;
+                top: 0.6em;
+                left: 0;
+            }
 
             & input{
                 cursor: inherit;
@@ -96,7 +114,7 @@ body {
             cursor: pointer;
             background-color: #ffdddd;
             transition: all 0.2s;
-            margin-right: 10px;
+            margin-right: 30px;
     
             &:hover {
                 background-color: #333;
@@ -180,7 +198,7 @@ body {
     }
 
     & > h3 {
-        @extend .font-lg;
+        @extend .font-md;
         width: fit-content;
         margin: 30px auto;
         line-height: 2rem;
@@ -191,7 +209,7 @@ body {
     }
 
     & > p {
-        @extend .font-lg;
+        @extend .font-md;
         width: fit-content;
         margin: 0 auto;
         color: red;
