--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,21 @@
 @charset "UTF-8";
-.mb-sm, .result__table, .result > p:nth-of-type(1) {
+.mb-sm, .container .question_cnt, .result__table, .result > p:nth-of-type(1) {
   margin-bottom: 20px !important;
 }
 
-.mb-md, .container > h2, .container .quiz, .container .form {
-  margin-bottom: 25px !important;
+.mb-md, .container > h2, .container .quiz, .container .form, .result > p:nth-of-type(2) {
+  margin-bottom: 45px !important;
 }
 
-.mb-lg, .result > p:nth-of-type(2) {
-  margin-bottom: 50px !important;
+.mb-lg {
+  margin-bottom: 70px !important;
 }
 
-.font-sm, .container > h2, .container .buttons .btn, .result > p:nth-of-type(2) {
+.font-sm, .container .question_cnt, .container > h2, .container .buttons .btn, .result > p:nth-of-type(2) {
   font-size: 1.2rem;
 }
 @media screen and (min-width: 480px) {
-  .font-sm, .container > h2, .container .buttons .btn, .result > p:nth-of-type(2) {
+  .font-sm, .container .question_cnt, .container > h2, .container .buttons .btn, .result > p:nth-of-type(2) {
     font-size: 1.8rem;
   }
 }
@@ -50,13 +50,14 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .global-container {
   background-color: rgb(236, 255, 255);
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 .global-container.inview::after {
   content: "";
@@ -78,6 +79,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+.container .question_cnt {
+  font-weight: 600;
 }
 .container > h2 {
   text-align: center;
@@ -96,29 +101,37 @@ body {
   background-color: rgb(255, 249, 242);
 }
 .container .form {
-  width: 300px;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-.container .form label {
-  flex-basis: 33%;
+.container .form div {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-bottom: 5px;
+  flex-basis: 45%;
   text-align: center;
-  margin-right: 15px;
   font-size: 1.5em;
-  cursor: pointer;
   position: relative;
 }
-.container .form label > input[type=radio] {
+.container .form div > label {
+  cursor: pointer;
+}
+.container .form div > label > input[type=radio] {
+  cursor: pointer;
   width: 1.2em;
   height: 1.2em;
   position: absolute;
   top: 0.6em;
-  left: 0;
+  left: 1.8em;
 }
-.container .form label input {
-  cursor: inherit;
+@media screen and (min-width: 480px) {
+  .container .form div > label > input[type=radio] {
+    left: 4em;
+  }
 }
-.container .form label.disabled {
+.container .form div > label.disabled {
   color: #9e9e9e;
   cursor: default;
 }
@@ -139,6 +152,9 @@ body {
   transition: all 0.2s;
   margin-right: 30px;
 }
+.container .buttons .btn:last-child {
+  margin-right: 0;
+}
 .container .buttons .btn:hover {
   background-color: #333;
   color: white;
@@ -153,8 +169,7 @@ body {
 .result {
   width: 80%;
   max-width: 800px;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: 90%;
   z-index: -1; /* 編集時ここを修正 */
   position: fixed;
   top: 50px;
@@ -164,6 +179,7 @@ body {
   opacity: 0; /* 編集時ここを修正 */
   transition: opacity 0.5s;
   border-radius: 25px;
+  overflow-y: scroll;
 }
 .result .close-btn {
   position: absolute;
