--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Zen Maru Gothic", sans-serif;
 }
 
 body {
@@ -151,6 +152,7 @@ body {
   background-color: #ffdddd;
   transition: all 0.2s;
   margin-right: 30px;
+  color: #333;
 }
 .container .buttons .btn:last-child {
   margin-right: 0;
