--- a/styles/style.scss
+++ b/styles/style.scss
@@ -172,9 +172,10 @@ body {
     overflow-y: scroll;
 
     & .close-btn {
-        position: absolute;
+        position: sticky;
         top: 5px;
-        right: 5px;
+        left: 100%;
+        transform: translateX(-5px);
         width: 40px;
         height: 40px;
         border: #333 solid 3px;
