--- a/styles/style.css
+++ b/styles/style.css
@@ -79,11 +79,16 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   margin: 0 auto;
-  padding-top: 50px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    padding-top: 50px;
+  }
 }
 .container .question_cnt {
   font-weight: 600;
@@ -238,7 +243,7 @@ body {
 .result > h3 {
   width: -moz-fit-content;
   width: fit-content;
-  margin: 30px auto;
+  margin: 0 auto 30px auto;
   line-height: 2rem;
   border: 2px solid #6b6b6b;
   border-radius: 10px;
