--- a/styles/style.css
+++ b/styles/style.css
@@ -198,6 +198,7 @@ body {
   transform: translateX(-50%);
   background-color: #fdffb4;
   opacity: 0; /* 編集時ここを修正 */
+  visibility: hidden;
   transition: opacity 0.5s;
   border-radius: 25px;
   overflow-y: scroll;
@@ -244,6 +245,7 @@ body {
 }
 .result.inview {
   z-index: 2;
+  visibility: visible;
   opacity: 1;
 }
 .result > h2 {
